# gst-plugin-dvbmediasink-dmm

./: README.md  configure.ac
src/: Makefile.am  gstdvbaudiosink.c  gstdvbaudiosink.h  gstdvbvideosink.c  gstdvbvideosink.h
